<resources>
    <string name="app_name">Play It Safe</string>
    <string name="hello_world">Senior Test</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register"><u>Not a member? Sign up now.</u></string>
    <string name="btn_link_to_login"><u>Already registred! Login Me.</u></string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <!-- SMS verification -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_register">Enter your credential to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Please enter OPT to verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below to access next step of registration)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>

    <string name="msg_idcard">Please enter your Identity Card Number</string>
    <string name="msg_sec_idcard">(Enter the ID card number below to verify yourself)</string>
    <string name="lbl_enter_idcard">Enter Identity Card Number</string>

    <string name="msg_email">Email verification process</string>
    <string name="msg_sec_email">(Please check your email and click a link on the message to confirm it.)</string>

    <string name="geofence_transition_invalid_type">Geofence transition invalid type</string>
    <string name="geofence_transition_notification_text">Enter or exit the area.</string>
    <string name="geofence_transition_entered">Entered in red zone area!</string>
    <string name="geofence_transition_exited">Exited from red zone already.</string>
    <string name="unknown_geofence_transition">Unknown transition</string>

    <string name="now">Now</string>
    <string name="thirtysecs">30 secs</string>
    <string name="onemin">1 min</string>
    <string name="fivemins">5 mins</string>
    <string name="make_call">Call</string>
    <string name="fake_name">Enter name</string>
    <string name="fake_number">Enter phone number</string>
    <string name="title_activity_fake_ringing">Fake Call</string>
    <string name="incomingcall">Incoming Call</string>
    <string name="fakecallname">Genny Nnaji</string>
    <string name="fakecallnumber">080371558000</string>

    <string name="activity_friends">Add friends</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- camera -->
    <string name="btnBrowsePicture">Browse Image</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Send</string>
    <string name="btnSelectFriend">Select Friend</string>
    <!--Slide menu-->
    <!-- Activity titles -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="nav_item_helps">i need guids!</string>
    <string name="nav_item_logout">Log out</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_helps</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_logout">Log out</string>
    <string name="title_help">i need guids!</string>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

</resources>
