<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FakeCall.FakecallActivity"
    android:background="#fbe6ff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/HeadFakecall"
            android:text="FAKE CALL"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

                <EditText
                    android:id="@+id/fakename"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/fake_name"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Mom"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                </EditText>

                <EditText
                    android:id="@+id/fakenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/fake_number"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:inputType="phone"
                    android:text="0905754862"
                    android:textColor="#ffffff"
                    android:background="#000000"
                    android:layout_below="@+id/fakename"
                    android:layout_alignStart="@+id/fakename"
                    android:layout_marginTop="33dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="setContact"
                    android:id="@+id/setContact"
                    android:textAlignment="center"
                    android:layout_above="@+id/imageView1"
                    android:layout_alignStart="@+id/setTime" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/abc"
                    android:onClick="onClickSelectContact"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="setTime"
                    android:id="@+id/setTime"
                    android:layout_below="@+id/imageView1"
                    android:layout_alignStart="@+id/radioGroup1" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/imageView1"
                    android:layout_marginTop="22dp"
                    android:checkedButton="@+id/radio1"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/now" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thirtysecs" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onemin"
                        android:checked="false" />
                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fivemins"
                        android:checked="false" />

                </RadioGroup>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/imageView2"
                    android:background="@drawable/fakecall_bg"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/radioGroup1"
                    android:layout_alignParentStart="true" />

                <Button
                    android:id="@+id/fakecalls"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/make_call"
                    android:background="#26ae90"
                    android:layout_below="@+id/radioGroup1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="33dp" />

            </RelativeLayout>
        </LinearLayout>



    </LinearLayout>



</LinearLayout>